--- a/style.css
+++ b/style.css
@@ -1,9 +1,49 @@
-
+.container form{
+    position: relative;
+    margin-top: 16px;
+    min-height: 490px;
+    background-color: #fff;
+    overflow: hidden;
+}
+.container form .form{
+    position: absolute;
+    background-color: #fff;
+    transition: 0.3s ease;
+}
+.container form .form.second{
+    opacity: 0;
+    pointer-events: none;
+    transform: translateX(100%);
+}
+form.secActive .form.second{
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateX(0);
+}
+form.secActive .form.first{
+    opacity: 0;
+    pointer-events: none;
+    transform: translateX(-100%);
+}
+.container form .title{
+    display: block;
+    margin-bottom: 8px;
+    font-size: 16px;
+    font-weight: 500;
+    margin: 6px 0;
+    color: #333;
+}
+.container form .fields{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 form .fields .input-field{
     display: flex;
-    width: calc(100% / 3 - 15px);
+    width: calc(100% / 4 - 15px);
     flex-direction: column;
-    margin: 4px 0;
+    margin: 4px 0
 }
 .input-field label{
     font-size: 12px;
@@ -52,9 +92,9 @@ margin-left: 15px;
 font-family: Arial;
 font-size: 20;
 }
-#form button {
+.topp {
     padding: 10px;
-    margin-top: 10px;
+   . margin-top: 10px;
     width: 100%;
     color: white;
     background-color: green;
